# CUDACourseLabs

./: .gitignore  README.md
10/templateProject/: CMakeLists.txt
10/templateProject/src/: main.cpp
10/templateProject/src/ScanKernel/: scankernel.cu
2D Convolution/src/: ImageProcessor.h
2D Convolution/src/ConvolutionKernel/: convolutionKernel.cu
2D Convolution/src/Image/: Image.h
2D Convolution/src/StencilKernel/: stencilKernel.cu
2D Convolution/src/Utils/: utils.h
8th Module/2D Convolution/: CMakeLists.txt
8th Module/2D Convolution/src/: ImageProcessor.h
8th Module/2D Convolution/src/ConvolutionKernel/: convolutionKernel.h
8th Module/2D Convolution/src/Image/: Image.h
8th Module/2D Convolution/src/StencilKernel/: stencilKernel.h
8th Module/2D Convolution/src/Utils/: utils.h
Histogram/: CMakeLists.txt
Histogram/src/: main.cpp
Histogram/src/GPUTimer/: GPUTimer.h
Histogram/src/Histogram/: Histogram.h  HistogramKernel.cu  HistogramKernel.h
Histogram/src/Utils/: utils.h
Module 2/Lab-2.4.cuda-toolkit/Example03/solution/: main.cu
Module 3/Proj/: CMakeLists.txt  main.cpp
Module 3/Proj/ImageBlur/: image_blur_kernel.cu  image_blur_kernel.h
Module 3/Proj/src/: main.cpp
Module 3/Proj/src/ColorToGreyscaleKernel/: color_to_greyscale_kernel.cu  color_to_greyscale_kernel.h
Module 3/Proj/src/ImageBlurKernel/: image_blur_kernel.cu  image_blur_kernel.h
Module 3/Proj/src/Utils/: utils.h
Module 4/: DLI Online Elective - GPU Memory Optimizations with CUDA CC++.html
Module 4/TiledMatrixMultiplication/: CMakeLists.txt  main.cpp
Module 4/TiledMatrixMultiplication/MatrixMultiplication/: MatrixMultiplication.h
Module 4/TiledMatrixMultiplication/TiledMulitplicationKernel/: TiledMulKernel.cu
Module 4/TiledMatrixMultiplication/input/: input.txt  input435084.txt  input6.txt  output.txt
Module 4/TiledMatrixMultiplication/src/: main.cpp
Module 4/TiledMatrixMultiplication/src/BasicMulitplicationKernel/: BasicMulKernel.cu  BasicMulKernel.h
Module 4/TiledMatrixMultiplication/src/MatrixMultiplication/: MatrixMultiplication.cpp  MatrixMultiplication.h
Module 4/TiledMatrixMultiplication/src/TiledMulitplicationKernel/: TiledMulKernel.cu  TiledMulKernel.h
Module 7/Histogram/src/: main.cpp
Module 7/Histogram/src/Histogram/: Histogram.h  HistogramKernel.cu  HistogramKernel.h
Scan/src/ScanKernel/: scankernel.h
TiledMatrixMultiplication/: CMakeLists.txt
TiledMatrixMultiplication/input/: input2.txt  input4.txt  input5.txt  input7.txt
TiledMatrixMultiplication/src/: main.cpp
TiledMatrixMultiplication/src/GPUTimer/: GPUTimer.h
TiledMatrixMultiplication/src/MatrixMultiplication/: MatrixMultiplication.cpp  MatrixMultiplication.h
TiledMatrixMultiplication/src/Utils/: utils.h
templateProject/: CMakeLists.txt
templateProject/Kernel/: kernel.cu  kernel.h
